added caramel, baked apples and related food

--- a/src/main/resources/assets/sqmeshimod/lang/en_us.json
+++ b/src/main/resources/assets/sqmeshimod/lang/en_us.json
@@ -1,4 +1,8 @@
 {
   "item.sqmeshimod.fusebud": "Fusebud",
-  "item.sqmeshimod.marrow": "Roast Marrow"
+  "item.sqmeshimod.marrow": "Roast Marrow",
+  "item.sqmeshimod.bapple": "Baked Apple",
+  "item.sqmeshimod.capple": "Candy Apple",
+  "item.sqmeshimod.caramel": "Caramel",
+  "item.sqmeshimod.carcookie": "Caramel-Chocolate Cookie"
 }
